shell-search-provider: Don't restrict results to $HOME

Because that's not what's expected at all.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/502